Added Header Top content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
     <header id="header">
         <div id="header-top">
             <div class="container">
-
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-6 col-md-offset-8">
+                        <ul id="header-top-icons">
+                            <li>
+                                <i class="fa fa-mobile" aria-hidden="true">
+                                    <span class="header-top-icon"><a href="tel:7408888888">(740)-888-8888</a></span>
+                                </i>
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope" aria-hidden="true">
+                                    <span class="header-top-icon"><a href="mailto:info@business.com">info@business.com</a></span>
+                                </i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="header-bottom">
